k8s/appointment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: registry.digitalocean.com/healthsynccontainer/appointment-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: do-secret
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: ClusterIP
