k8s/doctor-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
      - name: doctor-service
        image: registry.digitalocean.com/healthsynccontainer/doctor-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: do-secret
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
