k8s/patient-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: registry.digitalocean.com/healthsynccontainer/patient-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: do-secret
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
