k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: 
spec:
  ingressClassName: nginx
  rules:
  - host: 146.190.192.19.nip.io
    http:
      paths:
      - path: /patients/view
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
      - path: /patients/add
        pathType: Exact
        backend:
          service:
            name: patient-service
            port:
              number: 80
      - path: /patients/update
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
      - path: /patients/delete
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80

      - path: /doctors/view
        pathType: Prefix
        backend:
          service:
            name: doctor-service
            port:
              number: 80
      - path: /doctors/add
        pathType: Prefix
        backend:
          service:
            name: doctor-service
            port:
              number: 80
      - path: /doctors/update
        pathType: Prefix
        backend:
          service:
            name: doctor-service
            port:
              number: 80
      - path: /doctors/delete
        pathType: Prefix
        backend:
          service:
            name: doctor-service
            port:
              number: 80

      - path: /appointments/view
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
      - path: /appointments/add
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
      - path: /appointments/update
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
      - path: /appointments/delete
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80

      - path: /send_reminders
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
